@@ -301,4 +301,7 @@ Up to 2009-01-02 (since 1.7.5 release) Denton Woods <doomwiz@users.sf.net>
 2009-01-31 Denton Woods <doomwiz@users.sf.net>
 	* Added newlines to the end of several files to keep gcc quiet.
 	* Added new MSVC++ projects for examples.
+	* il_bmp.c:556: Changed to Header->biWidth from iCurImage->Width.  iCurImage->Width was not
+	  updated to the new width at this point.
+	
 	
